# voice-recorder

./: README.md  app.py  audio_player.py  pyproject.toml  render.yaml  requirements.txt  setup_env.sh
src/: audio_handler.py  utils.py  voice_recorder.py
static/css/: style.css
static/js/: recorder.js
templates/: index.html
